--- a/PyPlusWeb/index.html
+++ b/PyPlusWeb/index.html
@@ -34,6 +34,8 @@ Here is a quick screenshot:</p>
         We also have great docs for this project</p>
         <li>Focused on ERRORLESS code</li>
         <p>PyPlus comes with a linter for lots of languages, and a PEP8 formatter for Python</p>
+        <li>Distraction-free code editing</li>
+        <p>This editor does not have a lot of unneeded features, so you can work distraction-free</p>
     </ul>
 </section>
 <p>Developed by -- </p><a href="../index.html">NWSOFT</a>
