--- a/PyPlusWeb/index.html
+++ b/PyPlusWeb/index.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="utf-8">
 <link href="style.css" rel="stylesheet">
-<link rel="icon" href="Img/ico.png">
-<link href='https://fonts.googleapis.com/css?family=Source Code Pro' rel='stylesheet'>
+<link rel="icon" href="Help/Img/ico.png">
+<link href='https://fonts.googleapis.com/css?family=Source%20Code%20Pro' rel='stylesheet'>
 <title>PyPlus main page</title>
 </head>
 <body>
 <nav>
 <h3><a href="index.html">Home </a></h3>
-<h3><a href="help.html">Help Docs </a></h3>
+<h3><a href="Help/">Help Docs </a></h3>
 </nav>
 <hr>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -23,9 +23,9 @@
 <p>This is the main site of the PyPlus Text Editor.<br>
 If you don't have one, get it now, it's <strong>free</strong>.<br>
 <a id="btn" href="https://github.com/ZCG-coder/PyPlusSource/releases"><strong> ⇨ Get it now! ⇦ </strong></a>
-<p>If you need help, click <a href="help.html">here</a>.<br>
+<p>If you need help, click <a href="Help/">here</a>.<br>
 Here is a quick screenshot:</p>
-<img alt="preview" src="Img/preview.png" id="Preview">
+<img alt="preview" src="Help/Img/preview.png" id="Preview">
 <section>
     <h1>Why PyPlus</h1>
     <ul>
